# knewkarma

./: .readthedocs.yaml  Dockerfile  LICENSE  README.md  README.rst  dd.json  messages.po  pyproject.toml  pytest.ini  snapcraft.yaml  update-version.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql.yml  publish-docker.yml  python-package.yml  python-publish.yml  snapstore-deploy.yml  snapstore-publish.yml
Knew Karma/: KnewKarma.sln
Knew Karma GUI/KnewKarma/: KnewKarma.vbproj  LICENSE.rtf
Knew Karma GUI/KnewKarma/Assets/: CoreUtils.vb  Settings.vb
Knew Karma GUI/KnewKarma/Handlers/: ApiHandler.vb  DataGridViewHandler.vb
Knew Karma GUI/KnewKarma/Helpers/: CoreUtils.vb  Settings.vb
Knew Karma GUI/KnewKarma/My Project/: Application.Designer.vb  Application.myapp
Knew Karma GUI/KnewKarma/Windows/: AboutWindow.Designer.vb  AboutWindow.resx  AboutWindow.vb  CommentsWindow.Designer.vb  CommentsWindow.vb  DataWindow.Designer.vb  DataWindow.resx  DataWindow.vb  MainWindow.Designer.vb  MainWindow.resx  MainWindow.vb  PostsWindow.Designer.vb  PostsWindow.resx  SplashScreen1.Designer.vb  SplashScreen1.resx  SplashScreen1.vb  SubredditProfileWindow.resx  UserProfileWindow.resx  UserProfileWindow.vb
Knew Karma GUI/KnewKarmaSetup/: KnewKarmaSetup.vdproj
Knew Karma/KnewKarma/: KnewKarma.vbproj  README.md
Knew Karma/KnewKarma/Forms/: About.Designer.vb  About.vb  Comments.Designer.vb  Comments.vb  Main.Designer.vb  Main.resx  Main.vb  MiscData.Designer.vb  MiscData.vb  Posts.Designer.vb  Posts.vb  UserProfile.Designer.vb  UserProfile.vb
Knew Karma/KnewKarma/Handlers/: ApiHandler.vb  DataGridViewHandler.vb
Knew Karma/KnewKarma/My Project/: Application.Designer.vb  Resources.Designer.vb  Resources.resx
Knew Karma/KnewKarma/Utilities/: CoreUtils.vb  Settings.vb
Knew Karma/KnewKarma/Windows/: AboutWindow.vb  CommentsWindow.resx  MainWindow.Designer.vb  MainWindow.resx  PostsWindow.Designer.vb  PostsWindow.vb  SubredditProfileWindow.Designer.vb  SubredditProfileWindow.vb  UserProfileWindow.Designer.vb
Knew Karma/KnewKarmaSetup/: KnewKarmaSetup.vdproj
docs/: requirements.txt
docs/source/: api.md  cli.md  conf.py  index.rst  installation.md  usage.md
docs/source/_static/: custom.css
docs/source/_templates/: sidebar.html
examples/: posts.py  subreddit.py
knewkarma/: __init__.py  _api.py  _cli.py  _converters.py  _core.py  _coreutils.py  _data_cleaners.py  _knewkarma.py  _laundromat.py  _main.py  _masonry.py  _meta.py  _metadata.py  _parser.py  _parsers.py  _project.py  _utilities.py  _utils.py  about.py  api.py  base.py  brokers.py  caller.py  cli.py  coreutils.py  data.py  docs.py  executor.py  help.py  info.py  knewkarma.py  masonry.py  messages.py  metadata.py  parser.py  project.py  test.py  tree_masonry.py  version.py
knewkarma/data/post/: award.json  profile.json
knewkarma/data/shared/: comment.json
knewkarma/data/subreddit/: allows.json  banner.json  flairs.json  header.json  profile.json
knewkarma/data/user/: karma.json  profile.json  snoovatar.json  subreddit.json  verified.json
knewkarma/examples/: post_data.py  posts.py  search_posts.py  subreddit.py  subreddit_data.py  user.py  user_data.py
knewkarma/modules/: subreddit.py  user.py
knewkarma/tools/: __init__.py  cleaning_utils.py  data_utils.py  general_utils.py  package_utils.py  parsing_utils.py  time_utils.py
prime/meta/: snap.yaml
prime/meta/gui/: knewkarma.desktop
reports/: tests.html
snap/gui/: knewkarma.desktop
src/engines/: __init__.py
src/engines/karmakaze/: README.md  __init__.py  sanitiser.py  schemas.py
src/engines/klaus/: README.md  reddit.py
src/engines/snoopy/: README.md  __init__.py  api.py  reddit.py  sender.py
src/karmakrate/everything/: human_things.py  runtime_things.py
src/karmakrate/handlers/: auth_handler.py  io_handlers.py
src/karmakrate/konsole/: renderer.py
src/karmakrate/riches/: rich_colours.py  rich_logging.py  rich_render.py
src/karmakrate/runtime/: calls.py
src/knewkarma/: __init__.py  _cli.py  _core.py  _main.py  about.py  api.py  cli.py  core.py  extras.py  shared_imports.py  version.py
src/knewkarma/_cli/: command.py  commands.py  main.py  shared.py
src/knewkarma/_config/: client.py
src/knewkarma/_core/: client.py  post.py  posts.py  search.py  subreddit.py  subreddits.py  user.py  users.py
src/knewkarma/cli/: _commands.py  _exec.py  _main.py  app.py  backup.py  commands.py  main.py  mappings.py
src/toolbox/: checkers.py  colours.py  data.py  data_and_visualisation.py  package.py  render.py  runtime.py
src/tools/: io_assets.py  io_handlers.py  render.py  rich_render.py  runtime.py  runtime_ops.py
stage/: pyvenv.cfg
tests/: conftest.py  test_api.py  test_karmakaze.py  test_snoopy.py
tests/test_files/: comments.json  post.json  posts.json  subreddit.json  subreddits.json  user.json  users.json  wiki_page.json
(+41 files in other folders)
